MODRS-50 Improvements